--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta name="google-site-verification" content="VGnqzaQQSe1uB4lO_XbODvb97uGJ-MLUrVupu5YDLj0" />
     <title>الدولية للصيانة - خدمات صيانة الأجهزة الكهربائية</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
-   
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16948495503">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16948495503');
+</script>
 
     <!-- css styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/homepage.css" />
-    <link rel="fav"
+    
 
     <link rel="icon" type="image/x-icon" href="/images/preferences.png">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
