--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="google-site-verification" content="VGnqzaQQSe1uB4lO_XbODvb97uGJ-MLUrVupu5YDLj0" />
     <title>الدولية للصيانة - خدمات صيانة الأجهزة الكهربائية</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17426536663">
-</script>
+
+    \<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17519961246"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17426536663');
+  gtag('config', 'AW-17519961246');
 </script>
 
     <!-- css styles -->
