--- a/zanussi.html
+++ b/zanussi.html
@@ -7,14 +7,13 @@
     <title>صيانة زانوسي - الدولية للصيانة</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17426536663">
-</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17519961246"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17426536663');
+  gtag('config', 'AW-17519961246');
 </script>
 
 
