--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>الدولية للصيانة - خدمات صيانة الأجهزة الكهربائية</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
 
-    \<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17519961246"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
