change website name

--- a/zanussi.html
+++ b/zanussi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="VGnqzaQQSe1uB4lO_XbODvb97uGJ-MLUrVupu5YDLj0" />
-    <title>صيانة زانوسي - الدولية للصيانة</title>
+    <title>صيانة زانوسي - الرياده للصيانه</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
 
 <!-- Google tag (gtag.js) -->
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" dir="rtl">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <h4>الدولية للصيانة</h4>
+          <h4>الرياده للصيانه</h4>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main">
           <i class="fa-solid fa-bars"></i>
