--- a/Beko.html
+++ b/Beko.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="VGnqzaQQSe1uB4lO_XbODvb97uGJ-MLUrVupu5YDLj0" />
-    <title>صيانة بيكو - الدولية للصيانة</title>
+    <title>صيانة بيكو - الرياده للصيانه</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
  
 
@@ -59,7 +59,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" dir="rtl">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <h4>الدولية للصيانة</h4>
+          <h4>الرياده للصيانه</h4>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main">
           <i class="fa-solid fa-bars"></i>
@@ -224,7 +224,7 @@
           </div>
         </div>
         <div class="text-center mt-5 pt-4 border-top">
-          <p class="mb-0">© 2024 الدولية للصيانة. جميع الحقوق محفوظة</p>
+          <p class="mb-0">© 2024 الرياده للصيانه. جميع الحقوق محفوظة</p>
         </div>
       </div>
     </footer>
