--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="VGnqzaQQSe1uB4lO_XbODvb97uGJ-MLUrVupu5YDLj0" />
-    <title>الدولية للصيانة - خدمات صيانة الأجهزة الكهربائية</title>
+    <title>الرياده للصيانه - خدمات صيانة الأجهزة الكهربائية</title>
     <link rel="icon" type="image/x-icon" href="images/preferences.png">
 
 <!-- Google tag (gtag.js) -->
@@ -55,7 +55,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" dir="rtl">
       <div class="container">
         <a class="navbar-brand" href="index.html">
-          <h4>الدولية للصيانة</h4>
+          <h4>الرياده للصيانه</h4>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main">
           <i class="fa-solid fa-bars"></i>
@@ -110,16 +110,6 @@
           <div class="carousel-caption">
             <h1>فنيون متخصصون</h1>
             <p>فريق من الخبراء لخدمتك على مدار الساعة مع ضمان الجودة وأقل التكاليف</p>
-            <a href="tel:01151435562" class="btn main-btn">
-              <i class="fas fa-phone-alt me-2"></i>اتصل بنا الآن
-            </a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/poster.png" class="d-block w-100" alt="خدمات الصيانة" />
-          <div class="carousel-caption">
-            <h1>قطع غيار أصلية</h1>
-            <p>نستخدم أفضل قطع الغيار الأصلية لضمان أداء مثالي لأجهزتك</p>
             <a href="tel:01151435562" class="btn main-btn">
               <i class="fas fa-phone-alt me-2"></i>اتصل بنا الآن
             </a>
@@ -268,7 +258,7 @@
           
         </div>
         <div class="text-center mt-5 pt-4 border-top">
-          <p class="mb-0">© 2024 الدولية للصيانة. جميع الحقوق محفوظة</p>
+          <p class="mb-0">© 2024 الرياده للصيانه. جميع الحقوق محفوظة</p>
         </div>
       </div>
     </footer>
